--- a/01-maven-test/pom.xml
+++ b/01-maven-test/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.9.3</version>
+			<version>5.6.3</version>
 			<scope>test</scope>
 		</dependency>
 		<!--
@@ -26,15 +26,16 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.9.3</version>
+			<version>5.6.3</version>
 			<scope>test</scope>
 		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
-			<version>5.9.2</version>
-			<scope>provided</scope>
+			<version>5.6.3</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
